--- a/Fylo-FronedMentor-Challenge/index.html
+++ b/Fylo-FronedMentor-Challenge/index.html
@@ -3,20 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Fylo data storage component</title>
 </head>
 
 <body>
-
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
+	<div class="main">
+		<div id="con1" class="content"><center>
+			<img src="assets/logo.svg" />
+			<div style="margin-top: 10px;">
+				<button><img src="assets/icon-document.svg" width="20" height="20" /></button>
+				<button><img src="assets/icon-folder.svg" width="20" height="20" /></button>
+				<button><img style="padding-top: 6px;" src="assets/icon-upload.svg" width="20" height="15" /></button>
+			</div>
+		</center></div>
+		<div id="con2" class="content">
+			<div class="inside">
+				<p>You'v used <span>815 gb</span> of your storage</p>
+				<div class="bar">
+					<div class="progress-bar"><span id="percentage">81%</span></div>
+				</div>
+				<div class="info" style="float: left; width: 100%"><p style="float: left">0 gb</p><p style="float: right">1000 gb</p></div>
+			</div>
+			<div class="speech-bubble"><p>185</p><span>gb left</span></div>
+		</div>
+	</div>  
 </body>
 </html>
